juniper-from-schema/tests/compile_pass/valid_juniper_directive_definition.rs
#![allow(dead_code, unused_variables, unused_must_use, unused_imports)]
include!("../compile_pass/setup.rs");

juniper_from_schema::graphql_schema! {
    type Query {
        string: String!
    }

    schema { query: Query }

    directive @juniper(
        ownership: String = "borrowed",
        infallible: Boolean = false,
        with_time_zone: Boolean = true
    ) on FIELD_DEFINITION
}

pub struct Query;

impl QueryFields for Query {
    fn field_string<'a>(&self, executor: &Executor<'a, Context>) -> FieldResult<&String> {
        unimplemented!()
    }
}
